  Changelog for the c-ares project

* May 19 2009 (Yang Tse)
- Introduced ares_library_init() and ares_library_cleanup() functions.

  This is an API and ABI break for Win32/64 systems. Non-Win32/64 build targets
  using c-ares 1.6.1 can still survive without calling these functions. Read all
  the details on ares_library_init(3) and ares_library_cleanup(3) man pages that
  are included.

  curl/libcurl 7.19.5 is fully compatible with c-ares 1.6.1 on all systems.

  In order to use c-ares 1.6.1 with curl/libcurl on Win32/64 systems it is
  required that curl/libcurl is 7.19.5 or newer. In other words, it is not
  possible on Win32/64 to use c-ares 1.6.1 with a curl/libcurl version less
  than 7.19.5

* May 11 2009 (Daniel Stenberg)
- Gregor Jasny made c-ares link with libtool 's -export-symbols-regex option to
  only expose functions starting with ares_.

* May 2 2009 (Yang Tse)
- Use a build-time configured ares_socklen_t data type instead of socklen_t.

* April 21 2009 (Yang Tse)
- Moved potential inclusion of system's malloc.h and memory.h header files to
  setup_once.h.  Inclusion of each header file is based on the definition of
  NEED_MALLOC_H and NEED_MEMORY_H respectively.

* March 11 2009 (Yang Tse)
- Japheth Cleaver fixed acountry.c replacing u_long with unsigned long.

* February 20 2009 (Yang Tse)
- Do not halt compilation when using VS2008 to build a Windows 2000 target.

* February 3 2009 (Phil Blundell)
- If the server returns garbage or nothing at all in response to an AAAA query,
  go on and ask for A records anyway.

* January 31 2009 (Daniel Stenberg)
- ares_gethostbyname() now accepts 'AF_UNSPEC' as a family for resolving
  either AF_INET6 or AF_INET. It works by accepting any of the looksups in the
  hosts file, and it resolves the AAAA field with a fallback to A.

* January 14 2009 (Daniel Stenberg)
- ares.h no longer uses the HAVE_STRUCT_IN6_ADDR define check, but instead it